tests/ui/resolve/suggest-unresolve-149402.stable.stderr
error[E0433]: failed to resolve: use of undeclared type `Complete`
  --> $DIR/suggest-unresolve-149402.rs:7:12
   |
LL |     x.push(Complete::Item { name: "hello" });
   |            ^^^^^^^^ use of undeclared type `Complete`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0433`.
